show upgrading dependencies
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -19,20 +19,29 @@ Update your project's version of Astro to the latest version using your package 
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
-  # upgrades to Astro v2.x:
+  # Upgrade to Astro v2.x
   npm install astro@latest
+  
+  # Example: upgrade React and Tailwind integrations
+  npm install @astrojs/react@latest @astrojs/tailwind@latest
   ```
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  # upgrades to Astro v2.x:
+  # Upgrade to Astro v2.x
   pnpm install astro@latest
+
+  # Example: upgrade React and Tailwind integrations
+  pnpm install @astrojs/react@latest @astrojs/tailwind@latest
   ```
   </Fragment>
   <Fragment slot="yarn">
   ```shell
-  # upgrades to Astro v2.x:
+  # Upgrade to Astro v2.x
   yarn add astro@latest
+  
+  # Example: upgrade React and Tailwind integrations
+  yarn add @astrojs/react@latest @astrojs/tailwind@latest
   ```
   </Fragment>
 </PackageManagerTabs>
