update flag removal
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -346,14 +346,16 @@ Astro v2.0 brings some new features from experimental flags into the core codeba
 
 Remove the following experimental flags from `astro.config.mjs`:
 
-```js del={5-7}
+```js del={5-8}
 // astro.config.mjs
 import { defineConfig } from 'astro/config';
 
 export default defineConfig({
-  experimental: { contentCollections: true },
-  experimental: { prerender: true },
-  experimental: { error-overlay: true },
+  experimental: {
+    contentCollections: true,
+    prerender: true,
+    errorOverlay: true,
+  },
 })
 ```
 
