--- a/src/pages/en/guides/rss.mdx
+++ b/src/pages/en/guides/rss.mdx
@@ -116,15 +116,15 @@ You may generate an RSS feed from documents in `src/pages/`. Since `Astro.glob` 
 
 You can apply `pagesGlobToRssItems()` like so. This function assumes that you are globbing for items inside `src/pages/`, and all necessary feed properties are present in each document's frontmatter.
 
-```js title="src/pages/rss.xml.js" "pagesGlobToRssItems"
+```js title="src/pages/rss.xml.js" "pagesGlobToRssItems" "await pagesGlobToRssItems("
 import rss, { pagesGlobToRssItems } from '@astrojs/rss';
 
-export function get(context) {
+export async function get(context) {
   return rss({
     title: 'Buzz’s Blog',
     description: 'A humble Astronaut’s guide to the stars',
     site: context.site,
-    items: pagesGlobToRssItems(
+    items: await pagesGlobToRssItems(
       import.meta.glob('./blog/*.{md,mdx}'),
     ),
   });
