avoid double words
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -182,7 +182,7 @@ You can control this location with the [new `build.assets` configuration option]
 
 #### What should I do?
 
-Update your configuration with your deployment platform if your deployment relies on the location of these assets. 
+Update your deployment platform configuration if it relies on the location of these assets.
 
 
 ### Changed: Markdown plugin configuration
