errant function call
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -151,7 +151,7 @@ let allPosts = await Astro.glob('./posts/*.md');
 In 1.0, Astro deprecated `Astro.canonicalURL` for constructing a canonical URL. 
 
 
-Astro 2.0 removes this option entirely. `Astro.canonicalURL()` in your code will cause an error.
+Astro 2.0 removes this option entirely. `Astro.canonicalURL` in your code will cause an error.
 
 #### What should I do?
 
