--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -89,7 +89,7 @@ Astro 2.0 drops Node 14 support entirely, so that all Astro users can take advan
 
 ### Removed: `legacy.astroFlavoredMarkdown`
 
-In 1.0, Astro moved the old Astro Flavored Markdown (also known as Components in Markdown) to a legacy feature. 
+In 1.0, Astro moved the old Astro-Flavored Markdown (also known as Components in Markdown) to a legacy feature.
 
 Astro 2.0 removes the `legacy.astroFlavoredMarkdown` option completely. Importing and using components in `.md` files will no longer work.
 
