spell out changed
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -237,7 +237,7 @@ export default defineConfig({
 
 ### Changed: MDX plugin configuration
 
-#### Replaced: `extendPlugins` -> `extendMarkdownConfig`
+#### Replaced: `extendPlugins` changed to `extendMarkdownConfig`
 
 In 1.0, `.mdx.extendPlugins` managed how your MDX files should inherit your Markdown plugin configuration. This setting was used to indicate whether all Markdown plugins (`markdown`), or only Astro's default plugins (`defaults`) should be applied to MDX.
 
