update mdx config code sample
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -239,42 +239,48 @@ export default defineConfig({
 
 #### Replaced: `extendPlugins` changed to `extendMarkdownConfig`
 
-In 1.0, `.mdx.extendPlugins` managed how your MDX files should inherit your Markdown plugin configuration. This setting was used to indicate whether all Markdown plugins (`markdown`), or only Astro's default plugins (`defaults`) should be applied to MDX.
+In 1.0, the MDX integration’s `extendPlugins` option managed how your MDX files should inherit your Markdown configuration.
 
-Astro 2.0 replaces `mdx.extendPlugins` with three new, independently-configurable options:
+Astro 2.0 replaces `extendPlugins` with three new, independently-configurable options:
 
-- **[`mdx.extendMarkdownConfig`](/en/guides/integrations-guide/mdx/#extendmarkdownconfig)** (`true` by default) to inherit all of your Markdown configuration or none of it.
-- **`mdx.gfm`** (`true` by default) to enable or disable GitHub-Flavored Markdown in MDX.
-- **`mdx.smartypants`** (`true` by default) to enable or disable SmartyPants in MDX.
+- **[`extendMarkdownConfig`](/en/guides/integrations-guide/mdx/#extendmarkdownconfig)** (`true` by default) to inherit all of your Markdown configuration or none of it.
+- **`gfm`** (`true` by default) to enable or disable GitHub-Flavored Markdown in MDX.
+- **`smartypants`** (`true` by default) to enable or disable SmartyPants in MDX.
 
- ##### What should I do?
+##### What should I do?
 
 Delete `extendPlugins: 'markdown'` in your configuration. This is now default behavior. 
 
-```js del={6}
+```js del={8}
 // astro.config.mjs
 import { defineConfig } from 'astro/config';
+import mdx from '@astrojs/mdx';
 
 export default defineConfig({
-  mdx: {
-    extendPlugins: markdown,
-  }
+  integrations: [
+    mdx({
+      extendPlugins: 'markdown',
+    }),
+  ],
 });
 ```
 
 Replace `extendPlugins: 'defaults'` with `extendMarkdownConfig: false` and add the [separate options for GitHub-Flavored Markdown and SmartyPants](/en/guides/integrations-guide/mdx/#options-inherited-from-markdown-config) to enable these default plugins individually in MDX.
 
-```js del={6} ins={7-9}
+```js del={8} ins={9-11}
 // astro.config.mjs
 import { defineConfig } from 'astro/config';
+import mdx from '@astrojs/mdx';
 
 export default defineConfig({
-  mdx: {
-    extendPlugins: defaults,
-    extendMarkdownConfig: false,
-    smartypants: true,
-    gfm: true,
-  }
+  integrations: [
+    mdx({
+      extendPlugins: 'defaults',
+      extendMarkdownConfig: false,
+      smartypants: true,
+      gfm: true,
+    }),
+  ],
 });
 ```
 
