move gfm/smartypants
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -211,6 +211,8 @@ export default defineConfig({
 });
 ```
 
+If you were using `extendDefaultPlugins: false`, opt out of the defaults by setting the [new `gfm` and `smartypants` options](#added-gfm-and-smartypants) to `false` in your config.
+
 #### Added: `gfm` and `smartypants`
 
 Astro 2.0 replaces `markdown.extendDefaultPlugins` with separate Boolean options to control each of Astro's built-in default Markdown plugins individually. These are enabled by default, and can be set to `false` to remove each plugin independently.
