--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -198,7 +198,7 @@ GitHub-Flavored Markdown and Smartypants are now applied whether or not custom `
 
 ##### What should I do?
 
-Remove `extendDefaultPlugins: true` in your configuration. This is now Astro's default behavior in 2.0, and you can delete this line without any replacement.
+Remove `extendDefaultPlugins` in your configuration. This is now Astro's default behavior in 2.0, and you can delete this line without any replacement.
 
 ```js del={6}
 // astro.config.mjs
