moved gfm/smartypants
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -193,7 +193,7 @@ Astro 2.0 removes `markdown.extendDefaultPlugins` for controlling Astro's defaul
 
 Applying remark and rehype plugins in your Markdown configuration  **no longer disables Astro's default plugins**, so this option is no longer needed.
 
-GitHub-Flavored Markdown and Smartypants are now applied whether or not custom `remarkPlugins` or `rehypePlugins` are configured. (You can opt out manually by setting the [new `gfm` and `smartypants` options](#added-gfm-and-smartypants) to `false` in your config.)
+GitHub-Flavored Markdown and Smartypants are now applied whether or not custom `remarkPlugins` or `rehypePlugins` are configured.
 
 
 ##### What should I do?
