i18n(pt-BR): Update `integrations-guide.mdx` and `install/*.mdx` translations

--- a/src/pages/pt-br/install/auto.mdx
+++ b/src/pages/pt-br/install/auto.mdx
@@ -4,12 +4,14 @@ description: 'Como instalar Astro com NPM, PNPM ou YARN com a ferramenta create-
 layout: ~/layouts/MainLayout.astro
 i18nReady: true
 ---
-import InstallGuideTabGroup from '~/components/TabGroup/InstallGuideTabGroup.astro';
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
+Pronto para instalar Astro? Siga esse guia em como utilizar a interface de linha de comando `create astro` para começar.
 
-Pronto para instalar Astro? Siga os guias de configuração automático ou manual.
+:::note[Prefere instalar o Astro manualmente?]
+Leia nosso [guia de instalação manual passso a passo](/pt-br/install/manual/) no lugar.
+:::
 
 #### Pré-requisitos
 
@@ -17,11 +19,10 @@ Pronto para instalar Astro? Siga os guias de configuração automático ou manua
 - **Editor de Texto** - Recomendamos o [VS Code](https://code.visualstudio.com/) com a nossa [extensão oficial Astro](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode).
 - **Terminal** - Astro é acessado através da sua Interface de Linha de Comando.
 
-<InstallGuideTabGroup />
 
 #### Instalação
 
-`create-astro` é a forma mais rápida de iniciar um novo projeto Astro do zero.
+`create astro` é a forma mais rápida de iniciar um novo projeto Astro do zero. Ele irá te guiar por cada etapa da configuração do seu novo projeto Astro. Ele te permite escolher entre alguns templates iniciais diferentes ou então você pode [usar qualquer projeto existente no GitHub com o argumento `--template`](#templates-iniciais).
 
 :::tip[Previews online]
 Prefere tentar Astro no seu navegador? Visite [astro.new](https://astro.new/) para navegar por nossos templates iniciais e inicie um novo projeto Astro sem sair do seu navegador.
@@ -29,7 +30,7 @@ Prefere tentar Astro no seu navegador? Visite [astro.new](https://astro.new/) pa
 
 ## 1. Execute o Assistente de Instalação
 
-Execute o seguinte comando no seu terminal para iniciar nosso conveniente assistente de instalação, `create-astro`.
+Execute o seguinte comando no seu terminal para iniciar nosso conveniente assistente de instalação:
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -52,11 +53,11 @@ Execute o seguinte comando no seu terminal para iniciar nosso conveniente assist
   </Fragment>
 </PackageManagerTabs>
 
-O assistente `create-astro` irá te auxiliar em cada etapa da configuração do seu novo projeto Astro. Você pode executá-lo em qualquer lugar na sua máquina, então não há a necessidade de criar um novo diretório vazio para o seu projeto antes de começar. Se você ainda não tiver nenhum diretório vazio para o seu projeto, o assistente irá te ajudar a criar um para você automaticamente.
+Você pode executar `create astro` em qualquer lugar da sua máquina, então não há a necessidade de criar um diretório vazio para seu projeto antes de começar. Se você ainda não tiver um diretório vazio para o seu projeto, o assistente irá te ajudar a criar um para você automaticamente.
 
 Se tudo der certo, você verá a mensagem "Ready for liftoff!" ("Pronto para decolagem", em português) seguida de "Next steps" ("Próximos passos", em português) recomendados. Navegue no diretório do seu novo projeto com o comando `cd` para começar a utilizar Astro.
 
-Se você pulou a etapa `npm install` durante o assistente `create-astro`, certifique-se de instalar suas dependências antes de continuar.
+Se você pulou a etapa `npm install` durante o assistente de linha de comando, certifique-se de instalar suas dependências antes de continuar.
 
 ## 2. Inicie Astro ✨
 
@@ -87,6 +88,30 @@ Se tudo ocorrer bem, Astro deve estar servindo o seu projeto em [http://localhos
 Astro irá observar as mudanças em arquivos no seu diretório `src/`, logo você não precisa reiniciar o servidor enquanto faz mudanças durante o desenvolvimento.
 
 Se você não conseguir abrir o seu projeto no navegador, volte ao terminal onde você executou o comando `dev` e veja se algum erro ocorreu, ou se seu projeto está sendo servido em uma URL diferente da que foi indicada acima.
+
+## Templates Iniciais
+
+Você também pode iniciar um novo projeto Astro com base em um repositório existente do GitHub passando o argumento `--template` ao comando `create astro`.
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npm create astro@latest -- --template <nome-github>/<repositório-github>
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm create astro@latest --template <nome-github>/<repositório-github>
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn create astro --template <nome-github>/<repositório-github>
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
+Explore nosso [mostruário de temas e templates iniciais](https://astro.build/themes/) no qual você pode navegar temas para blogs, portfólios, documentação, páginas iniciais e mais! Ou então, [pesquise no GitHub](https://github.com/search?o=desc&q=astro+starter&s=stars&type=Repositories) para mais projetos iniciais.
 
 ## Próximos Passos
 
