--- a/src/pages/pt-br/install/manual.mdx
+++ b/src/pages/pt-br/install/manual.mdx
@@ -4,12 +4,15 @@ description: 'Como instalar Astro manualmente com NPM, PNPM ou Yarn.'
 layout: ~/layouts/MainLayout.astro
 i18nReady: true
 ---
-import InstallGuideTabGroup from '~/components/TabGroup/InstallGuideTabGroup.astro';
-import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro';
+import FileTree from '~/components/FileTree.astro';
+import Button from '~/components/Button.astro'
 
+Este guia irá te orientar através das etapas necessárias para instalar e configurar um novo projeto Astro manualmente se você não prefere utilizar [a ferramenta de CLI automática](/pt-br/install/auto/).
 
+#### Prefere uma forma mais rápida de começar?
 
-Pronto para instalar Astro? Siga os guias de configuração automático ou manual.
+<Button href="/pt-br/install/auto/">Tente o assistente de CLI create astro →</Button>
 
 #### Pré-requisitos
 
@@ -17,11 +20,10 @@ Pronto para instalar Astro? Siga os guias de configuração automático ou manua
 - **Editor de Texto** - Recomendamos o [VS Code](https://code.visualstudio.com/) com a nossa [extensão oficial Astro](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode).
 - **Terminal** - Astro é acessado através da sua Interface de Linha de Comando.
 
-<InstallGuideTabGroup />
 
 #### Instalação
 
-Se você não deseja usar a nossa interface de linha de comando `create-astro`, você pode configurar o seu projeto manualmente seguindo o guia abaixo.
+Se você não deseja usar a nossa interface de linha de comando `create astro`, você pode configurar o seu projeto manualmente seguindo o guia abaixo.
 
 ## 1. Crie o seu diretório
 
@@ -146,21 +148,45 @@ Se você deseja incluir [componentes de frameworks de UI](/pt-br/core-concepts/f
 
 📚 Leia a [referência de configuração da API](/pt-br/reference/configuration-reference/) Astro para mais informações.
 
-## 6. Próximos Passos
+## 6. Adicione suporte a TypeScript
+
+TypeScript é configurado utilizando `tsconfig.json`. Mesmo que você não escreva código TypeScript, este arquivo é importante para que ferramentas como o Astro e o VS Code saibam como entender seu projeto. Algumas funcionalidades (como importação de pacotes do npm) não são completamente suportadas no editor sem um arquivo `tsconfig.json`. 
+
+Se você pretende escrever código TypeScript, usar o template `strict` ou `strictest` do Astro é recomendado. Você pode ver e comparar as três configurações de template em [astro/tsconfigs/](https://github.com/withastro/astro/blob/main/packages/astro/tsconfigs/).
+
+Crie `tsconfig.json` na raiz do seu projeto e copie o código abaixo nele. (Você pode utilizar `base`, `strict` ou `strictest` como seu template de TypeScript):
+
+```json title="tsconfig.json" "base"
+{
+  "extends": "astro/tsconfigs/base",
+}
+```
+
+Finalmente, crie `src/env.d.ts` para fazer o TypeScript entender sobre tipos de ambiente disponíveis em um projeto Astro:
+
+```ts title="src/env.d.ts"
+/// <reference types="astro/client" />
+```
+
+📚 Leia o [guia de configuração de TypeScript do Astro](/pt-br/guides/typescript/#configuração) para mais informação.
+
+## 7. Próximos Passos
 
 Se você seguir os passos acima, o diretório do seu projeto deve se parecer com a seguinte estrutura:
 
-```
-├── node_modules/
-├── public/
-│   └── robots.txt
-├── src/
-│   └── pages/
-│       └── index.astro
-├── astro.config.mjs
-├── package-lock.json (ou: yarn.lock, pnpm-lock.yaml, etc.)
-└── package.json
-```
+<FileTree>
+- node_modules/
+- public/
+  - robots.txt
+- src/
+  - pages/
+    - index.astro
+  - env.d.ts
+- astro.config.mjs
+- package-lock.json ou `yarn.lock`, `pnpm-lock.yaml`, etc.
+- package.json
+- tsconfig.json
+</FileTree>
 
 Parabéns! Você está pronto para usar Astro!
 
