--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -52,17 +52,6 @@ Astro v2.0 includes some breaking changes, as well as the removal of some previo
 
 See [the changelog](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md) for full release notes.
 
-
-### Updated: Vite 4
-
-Astro v2.0 upgrades from Vite 3 to [Vite 4](https://vitejs.dev/), released in December 2022.
-
-#### What should I do?
-
-There should be no changes to your code necessary! We've handled most of the upgrade for you inside of Astro; however, some subtle Vite behaviors may still change between versions. 
-
-Refer to the official [Vite Migration Guide](https://vitejs.dev/guide/migration.html) if you run into trouble.
-
 ### Removed: Support for Node 14
 
 Node 14 is scheduled to reach its End of Life in April 2023. 
@@ -87,83 +76,13 @@ Astro 2.0 drops Node 14 support entirely, so that all Astro users can take advan
     You can specify Node `16.12.0` for your Astro project either in a dashboard configuration setting, or a `.nvmrc` file.
 
 
-### Removed: `legacy.astroFlavoredMarkdown`
+### Reserved: `src/content/`
 
-In 1.0, Astro moved the old Astro-Flavored Markdown (also known as Components in Markdown) to a legacy feature.
-
-Astro 2.0 removes the `legacy.astroFlavoredMarkdown` option completely. Importing and using components in `.md` files will no longer work.
+Astro 2.0 now includes the Collections API for organizing your Markdown and MDX files into [content collections](/en/guides/content-collections/). This API reserves `src/content/` as a special folder.
 
 #### What should I do?
 
-Remove this legacy flag. It is no longer available in Astro.
-
-```js del={3-5}
-// astro.config.mjs
-export default defineConfig({
-	legacy: {
-		astroFlavoredMarkdown: true,
-	},
-})
-
-```
-
-If you were using this feature in 1.x, we recommend [using the MDX integration](/en/guides/integrations-guide/mdx/) which allows you to combine components and JSX expressions with Markdown syntax.
-
-### Removed: `Astro.resolve()`
-
-In 0.24, Astro deprecated `Astro.resolve()` for getting resolved URLs to assets that you might want to reference in the browser.
-
-Astro 2.0 removes this option entirely. `Astro.resolve()` in your code will cause an error.
-
-#### What should I do?
-
-Resolve asset paths using `import` instead. For example:
-
-```astro
-// src/pages/index.astro
----
-import 'style.css';
-import imageUrl from './image.png';
----
-
-<img src={imageUrl} />
-```
-
-### Removed: `Astro.fetchContent()`
-
-In 0.26, Astro deprecated `Astro.fetchContent()`for fetching data from your local Markdown files.
-
-Astro 2.0 removes this option entirely. `Astro.fetchContent()` in your code will cause an error.
-
-#### What should I do?
-
-Use [`Astro.glob()`](/en/guides/imports/#astroglob) to fetch Markdown files, or convert to the [Content Collections](/en/guides/content-collections/) feature.
-
-```astro
-// src/pages/index.astro
----
-let allPosts = await Astro.glob('./posts/*.md');
----
-```
-
-### Removed: `Astro.canonicalURL`
-
-In 1.0, Astro deprecated `Astro.canonicalURL` for constructing a canonical URL. 
-
-
-Astro 2.0 removes this option entirely. `Astro.canonicalURL` in your code will cause an error.
-
-#### What should I do?
-
-Use `Astro.url` to construct a canonical URL.
-
-```astro
-// src/pages/index.astro
----
-const canonicalURL = new URL(Astro.url.pathname, Astro.site);
----
-
-```
+Rename an existing `src/content/` folder to avoid conflicts. This folder, if it exists, can now only be used for [content collections](/en/guides/content-collections/).
 
 ### Changed: `_astro/` folder for build assets
 
@@ -183,7 +102,6 @@ You can control this location with the [new `build.assets` configuration option]
 #### What should I do?
 
 Update your deployment platform configuration if it relies on the location of these assets.
-
 
 ### Changed: Markdown plugin configuration
 
@@ -206,12 +124,10 @@ import { defineConfig } from 'astro/config';
 
 export default defineConfig({
   markdown: {
-    extendDefaultPlugins: true,
+    extendDefaultPlugins,
   }
 });
 ```
-
-If you were using `extendDefaultPlugins: false`, opt out of the defaults by setting the [new `gfm` and `smartypants` options](#added-gfm-and-smartypants) to `false` in your config.
 
 #### Added: `gfm` and `smartypants`
 
@@ -325,19 +241,95 @@ Astro 2.0 gives remark and rehype plugins access to user frontmatter via frontma
 
 Check any remark and rehype plugins you have written to see whether their behavior has changed. Note that `data.astro.frontmatter` is now the _complete_ Markdown or MDX document's frontmatter, rather than an empty object.
 
-### Reserved: `src/content/`
+### Removed: `legacy.astroFlavoredMarkdown`
 
-Astro 2.0 now includes the Collections API for organizing your Markdown and MDX files into [content collections](/en/guides/content-collections/). This API reserves `src/content/` as a special folder.
+In 1.0, Astro moved the old Astro-Flavored Markdown (also known as Components in Markdown) to a legacy feature.
+
+Astro 2.0 removes the `legacy.astroFlavoredMarkdown` option completely. Importing and using components in `.md` files will no longer work.
 
 #### What should I do?
 
-Rename an existing `src/content/` folder to avoid conflicts. This folder, if it exists, can now only be used for [content collections](/en/guides/content-collections/).
+Remove this legacy flag. It is no longer available in Astro.
+
+```js del={3-5}
+// astro.config.mjs
+export default defineConfig({
+	legacy: {
+		astroFlavoredMarkdown: true,
+	},
+})
+
+```
+
+If you were using this feature in 1.x, we recommend [using the MDX integration](/en/guides/integrations-guide/mdx/) which allows you to combine components and JSX expressions with Markdown syntax.
+
+### Removed: `Astro.resolve()`
+
+In 0.24, Astro deprecated `Astro.resolve()` for getting resolved URLs to assets that you might want to reference in the browser.
+
+Astro 2.0 removes this option entirely. `Astro.resolve()` in your code will cause an error.
+
+#### What should I do?
+
+Resolve asset paths using `import` instead. For example:
+
+```astro
+// src/pages/index.astro
+---
+import 'style.css';
+import imageUrl from './image.png';
+---
+
+<img src={imageUrl} />
+```
+
+### Removed: `Astro.fetchContent()`
+
+In 0.26, Astro deprecated `Astro.fetchContent()`for fetching data from your local Markdown files.
+
+Astro 2.0 removes this option entirely. `Astro.fetchContent()` in your code will cause an error.
+
+#### What should I do?
+
+Use [`Astro.glob()`](/en/guides/imports/#astroglob) to fetch Markdown files, or convert to the [Content Collections](/en/guides/content-collections/) feature.
+
+```astro
+// src/pages/index.astro
+---
+let allPosts = await Astro.glob('./posts/*.md');
+---
+```
+
+### Removed: `Astro.canonicalURL`
+
+In 1.0, Astro deprecated `Astro.canonicalURL` for constructing a canonical URL. 
+
+
+Astro 2.0 removes this option entirely. `Astro.canonicalURL` in your code will cause an error.
+
+#### What should I do?
+
+Use `Astro.url` to construct a canonical URL.
+
+```astro
+// src/pages/index.astro
+---
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+---
+
+```
+
+### Updated: Vite 4
+
+Astro v2.0 upgrades from Vite 3 to [Vite 4](https://vitejs.dev/), released in December 2022.
+
+#### What should I do?
+
+There should be no changes to your code necessary! We've handled most of the upgrade for you inside of Astro; however, some subtle Vite behaviors may still change between versions. 
+
+Refer to the official [Vite Migration Guide](https://vitejs.dev/guide/migration.html) if you run into trouble.
 
 ## Astro 2.0 Experimental Flags Removed
-
-Astro v2.0 brings some new features from experimental flags into the core codebase.
-
-#### What should I do?
 
 Remove the following experimental flags from `astro.config.mjs`:
 
