--- a/src/pages/en/core-concepts/astro-components.mdx
+++ b/src/pages/en/core-concepts/astro-components.mdx
@@ -11,9 +11,9 @@ i18nReady: true
 
 Astro component syntax is a superset of HTML. The syntax was [designed to feel familiar to anyone with experience writing HTML or JSX](#differences-between-astro-and-jsx), and adds support for including components and JavaScript expressions. You can spot an Astro component by its file extension: `.astro`.
 
-Astro components are extremely flexible. Often, an Astro component will contain some **reusable UI on the page**, like a header or a profile card. At other times, an Astro component may contain a smaller snippet of HTML, like a collection of common `<meta>` tags that make SEO easy to work with. Astro components can even contain an entire page layout.
+Astro components are extremely flexible. Often, an Astro component will contain some **reusable UI on the page**, like a header or a profile card. At other times, an Astro component may contain a smaller snippet of HTML, like a collection of common `<meta>` tags that make SEO easy to work with. It can even contain an entire page layout.
 
-The most important thing to know about Astro components is that they **render to HTML during your build.** Even if you run JavaScript code inside of your components, it will all run ahead of time, stripped from the final page that you send to your users. The result is a faster site, with zero JavaScript footprint added by default.
+The most important thing to know about Astro components is that they **render to HTML ahead of time**. It could be during the build step or on the server on demand, depending on how you have configured your project. Even if you run JavaScript code inside of your components, all of it will be stripped from the final page sent to your users' browsers. The result is a faster site, with zero JavaScript footprint added by default. 
 
 
 ## Component Structure
@@ -80,12 +80,12 @@ Below the component script, sits the component template. The component template 
 
 If you write plain HTML here, your component will render that HTML in any Astro page it is imported and used.
 
-However, Astro's component template syntax also supports **JavaScript expressions**, **imported components** and [**special Astro directives**](/en/reference/directives-reference/). Data and values defined (at page build time) in the component script can be used in the component template to produce dynamically-created HTML.
+However, Astro's component template syntax also supports **JavaScript expressions**, **imported components** and [**special Astro directives**](/en/reference/directives-reference/). Data and values defined (during rendering) in the component script can be used in the component template to produce dynamically-created HTML.
 
 ```astro title="src/components/MyFavoritePokemon.astro"
 ---
 // Your component script here!
-import ReactPokemonComponent from '../components/ReactPokemonComponent.jsx';
+import PokemonComponent from '../components/PokemonComponent.astro';
 const myFavoritePokemon = [/* ... */];
 ---
 <!-- HTML comments supported! -->
@@ -95,8 +95,8 @@ const myFavoritePokemon = [/* ... */];
 <!-- Use props and other variables from the component script: -->
 <p>My favorite pokemon is: {Astro.props.title}</p>
 
-<!-- Include other components with a `client:` directive to hydrate: -->
-<ReactPokemonComponent client:visible />
+<!-- Include imported components: -->
+<PokemonComponent />
 
 <!-- Mix HTML with JavaScript expressions, similar to JSX: -->
 <ul>
@@ -107,12 +107,16 @@ const myFavoritePokemon = [/* ... */];
 <p class:list={["add", "dynamic", {classNames: true}]} />
 ```
 
+You're not limited to just Astro components though. You can also include **JavaScript framework components** in your template.
+
+📚 Learn about using [JavaScript framework components](/en/core-concepts/framework-components/) in your Astro project.
+
 ## JSX-like Expressions
 
 You can define local JavaScript variables inside of the frontmatter component script within an Astro component. You can then inject these variables into the component's HTML template using JSX-like expressions!
 
 :::note[dynamic vs reactive]
-Using this approach, you can include **dynamic** values that are calculated in the frontmatter.  But once included, these values are not **reactive** and will never change. Astro components are templates that only run once, at build time.
+Using this approach, you can include **dynamic** values that are calculated in the frontmatter. But once included, these values are not **reactive** and will never change. Astro components are templates that only run during the rendering step.
 
 See below for more examples of [differences between Astro and JSX](#differences-between-astro-and-jsx).
 :::
@@ -515,9 +519,3 @@ HTML components must contain only valid HTML, and therefore lack key Astro compo
 :::note
 A [`<slot />` element](/en/core-concepts/astro-components/#slots) inside an HTML component will work as it would in an Astro component. In order to use the [HTML Web Component Slot](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/slot) element instead, add `is:inline` to your `<slot>` element.
 :::
-
-## Next Steps
-
-📚 Read about [Astro's built-in components](/en/reference/api-reference/#built-in-components).
-
-📚 Learn about using [JavaScript framework components](/en/core-concepts/framework-components/) in your Astro project.
