i18n(pt-BR): Update `fonts.mdx` and `images.mdx` translations

--- a/src/pages/pt-br/guides/fonts.mdx
+++ b/src/pages/pt-br/guides/fonts.mdx
@@ -69,12 +69,12 @@ O projeto [Fontsource](https://fontsource.org/) simplifica utilizar Google Fonts
     <PackageManagerTabs>
       <Fragment slot="npm">
       ```shell
-      npm i @fontsource/twinkle-star
+      npm install @fontsource/twinkle-star
       ```
       </Fragment>
       <Fragment slot="pnpm">
       ```shell
-      pnpm i @fontsource/twinkle-star
+      pnpm install @fontsource/twinkle-star
       ```
       </Fragment>
       <Fragment slot="yarn">
@@ -107,11 +107,37 @@ O projeto [Fontsource](https://fontsource.org/) simplifica utilizar Google Fonts
     }
     ```
 
+## Adicione fontes com Tailwind
+
+Se você estiver utilizando a [integração para Tailwind](/pt-br/guides/integrations-guide/tailwind/), você pode ou adicionar uma declaração `@font-face` para uma fonte local ou utilizar a estratégia de `import` do Fontsource para registrar sua fonte.
+
+1. Siga algum dos guias acima, mas pule a etapa final de adicionar `font-family` ao seu CSS.
+
+1.  Adicione o nome da typeface em `tailwind.config.cjs`.
+
+    Este exemplo adiciona `InterVariable` e `Inter` a pilha de fontes sans-serif, com as fontes de fallback padrões do Tailwind CSS.
+
+    ```js ins={2,8-10}
+    // tailwind.config.cjs
+    const defaultTheme = require("tailwindcss/defaultTheme");
+    module.exports = {
+      // ...
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: ["InterVariable", "Inter", ...defaultTheme.fontFamily.sans],
+          },
+        },
+      },
+      // ...
+    };
+    ```
+
+    Agora, todo texto sans-serif (o padrão no Tailwind) em seu projeto irá utilizar sua fonte escolhida e a classe `font-sans` também irá aplicar a fonte Inter.
+
+Veja [a documentação do Tailwind em como adicionar famílias de fontes customizadas](https://tailwindcss.com/docs/font-family#using-custom-values) para mais informação.
+
 ## Mais recursos
-
-### Adicione fontes com Tailwind
-
-Se você estiver utilizando a [integração para Tailwind](/pt-br/guides/integrations-guide/tailwind/), você pode ou adicionar uma declaração `@font-face` para uma fonte local ou utilizar a estratégia de `import` do Fontsource para registrar sua fonte. Após isso, siga [a documentação do Tailwind em como adicionar famílias de fontes customizadas](https://tailwindcss.com/docs/font-family#using-custom-values).
 
 ### Aprenda como fontes web funcionam
 
