Fix: lint error and some redundant translation

--- a/src/pages/ja/guides/images.mdx
+++ b/src/pages/ja/guides/images.mdx
@@ -10,15 +10,15 @@ Astroは、プロジェクト内に保存されている画像やリモート上
 
 ### `.astro`ファイル内
 
-astroでは`<img>`要素を使って画像を表示し、HTML画像属性をすべてサポートしています。
+astroでは`<img>`要素を使って画像を表示でき、HTML画像属性をすべてサポートしています。
 
-`src`属性は必須で、画像フォーマットはどこに保存されているかによって変わります。
+`src`属性は必須で、その書式はどこに保存されているかによって変わります。
 
 ```astro title="src/pages/index.astro"
 ---
 import rocket from '../images/rocket.svg';
 ---
-<!-- ほかサーバー上のリモート画像 -->
+<!-- 他サーバー上のリモート画像 -->
 <img src="https://astro.build/assets/logo.png" width="25" alt="Astro">
 
 <!-- public/assets/stars.png に保存されているローカル画像 -->
@@ -30,7 +30,7 @@ import rocket from '../images/rocket.svg';
 
 ### Markdownファイル内
 
-`.md`ファイル内に標準的な`![]()`構文や`<img>`タグを記載することで`public/`フォルダや他サーバー上にあるリモート画像を表示することができます。
+`.md`ファイル内では標準的な`![]()`構文や`<img>`タグを記載することで`public/`フォルダや、他サーバー上にあるリモート画像を表示できます。
 
 もし`public/`に画像を保存できない場合、Markdownライクな文法でインポートされたコンポーネントを結合できる`.mdx`ファイルフォーマットの利用をお勧めします。AstroにMDXをサポートするには[MDX インテグレーション](/ja/guides/integrations-guide/mdx/)を利用します。
 
@@ -43,16 +43,16 @@ import rocket from '../images/rocket.svg';
 ![A starry night sky.](/assets/stars.png)
 <img src="/assets/stars.png" alt="A starry night sky.">
 
-<!-- 他サーバーにあるリモート画像 -->
+<!-- 他サーバー上にあるリモート画像 -->
 ![Astro](https://astro.build/assets/logo.png)
 <img src="https://astro.build/assets/logo.png" width="25" alt="Astro">
 ```
 
 ### MDXファイル内
 
-`.mdx`ファイル内で標準的なMarkdown文法`![]()`やJSXの`<img />`タグを使って`public/`フォルダーやリモートサーバーの画像を表示することができます。
+`.mdx`ファイル内では標準的なMarkdown文法`![]()`やJSXの`<img />`タグを使って`public/`フォルダーやリモートサーバーの画像を表示できます。
 
-加えて、Astroコンポーネントのようにプロジェクトの`src`ディレクトリに保存されているインポートして利用することができます。
+加えて、Astroコンポーネントのようにプロジェクトの`src`ディレクトリに保存されている画像をインポートして利用できます。
 
 ```mdx title="src/pages/post-1.mdx"
 
@@ -74,17 +74,17 @@ import rocket from '../images/rocket.svg';
 
 ### UIフレームワークコンポーネント内
 
-[UIフレームコンポーネント](/ja/core-concepts/framework-components/)(ReactやSvelte等)に画像を追加する場合、そのコンポーネントのフレームワークに沿った画像の文法を利用します。
+[UIフレームコンポーネント](/ja/core-concepts/framework-components/)(ReactやSvelteなど)に画像を追加する場合、そのコンポーネントのフレームワークに沿った画像の文法を利用します。
 
 ## 画像の保存場所
 
-### `src/`フォルダにあるアセット
+### `src/`
 
 `src`に保存された画像は、コンポーネント(`.astro`や`.mdx`、そして他のUIフレームワーク)から利用できますが、Markdownファイルからは利用できません。
 
-Markdownファイルから利用するのであれば、[`public/`](#public)または[CMSやCDN上の画像利用](#CMSやCDN上の画像利用)をお勧めします。
+Markdownファイルから利用する場合、[`public/`へ配置する](#public)か[CMSやCDN上の画像を利用](#cmsやcdn上の画像利用)することをお勧めします。
 
-コンポーネントファイル内から**相対ファイルパス**か[importエイリアス](/ja/guides/aliases/)からインポートし、画像の`src`属性として利用することができます。
+画像を**相対ファイルパス**または[importエイリアス](/ja/guides/aliases/)を利用してコンポーネントファイル内でインポートし、画像の`src`属性として利用できます。
 
 
 ```astro
@@ -97,11 +97,11 @@ import logo from '../images/logo.png';
 <img src={logo} width="40" alt="Astro" />
 ```
 
-### `public/`フォルダにあるアセット
+### `public/`
 
 `public/`に保存された画像はコンポーネント(`.astro`や`.mdx`、そして他のUIフレームワーク)とMarkdownファイルからも利用できます。
 
-しかし、`/public`ディレクトリにあるファイルは常に処理されずにそのままで提供、コピーされます。Markdownファイル以外で画像を利用する場合、Astroが画像を変換・最適化・バンドルできるように可能な限り`src`にローカル画像を保存することをお勧めします。
+しかし、`/public`ディレクトリにあるファイルは常に処理されずにそのままで提供、コピーされます。Markdownファイル以外で画像を利用する場合はAstroが画像を変換・最適化・バンドルできるように、可能な限りローカル画像は`src`への保存をお勧めします。
 
 `src`属性は**publicフォルダからの相対パス**です。Markdownでは`![]()`の表記を利用できます。
 
@@ -112,53 +112,53 @@ import logo from '../images/logo.png';
 <img src="/images/logo.png" />
 ```
 
-## Astro画像のインテグレーション
+## Astro画像インテグレーション
 
-Astroの公式な画像のインテグレーションでは、最適化された画像をレンダリングするための2つの`<Image />`と`<Picture />`コンポーネントを提供しています。これは全静的サイトおよび[いくつかのサーバーサイドレンダリングするデプロイホスト](/ja/guides/integrations-guide/image/#installation)をサポートしています。
+Astroの公式な画像のインテグレーションでは、最適化された画像をレンダリングするための2つの`<Image />`と`<Picture />`コンポーネントを提供しています。これらのコンポーネントは全ての静的サイトと、[サーバーサイドレンダリングするデプロイホスト](/ja/guides/integrations-guide/image/#installation)をサポートしています。
 
-[`@astrojs/image`のインストール](/ja/guides/integrations-guide/image/#installation)をすると、`.astro`と`.mdx`等Astroコンポーネントを利用できるファイル内でこれらの2つのコンポーネントを利用できます。
+[`@astrojs/image`のインストール](/ja/guides/integrations-guide/image/#installation)することで、`.astro`と`.mdx`などのAstroコンポーネントを利用できるファイル内でこの2つのコンポーネントを利用できます。
 
 ### `<Image />`
 
-Astroの[`<Image />`コンポーネント](/ja/guides/integrations-guide/image/#image-)は1つの画像を最適化し、幅・高さ・アスペクト比を指定できます。特定の出力フォーマットに画像を変換することもできます。
+Astroの[`<Image />`コンポーネント](/ja/guides/integrations-guide/image/#image-)は1つの画像を最適化し、幅・高さ・アスペクト比を指定できます。また特定の出力フォーマットに画像を変換できます。
 
-このコンポーネントはディスプレイ間で一貫したサイズを維持したい画像や品質を厳密にコントロールしたい画像(ロゴなど)で有効です。
+このコンポーネントはディスプレイ間で一貫したサイズを維持したい画像や、品質を厳密にコントロールしたい画像(ロゴなど)で有効です。
 
 レスポンシブ画像の場合やアートディレクションの場合は、代わりに`<Picture />`コンポーネントを利用します。
 
-### `src/`のローカル画像
+#### `src/`のローカル画像
 
 (必須属性:  [`src`](/ja/guides/integrations-guide/image/#src)と[`alt`](/ja/guides/integrations-guide/image/#alt))
 
 フロントマターで画像をインポートして、`<Image />`コンポーネントの`src`属性へ直接渡します。
 
-`alt` is required, but [all other properties](/en/guides/integrations-guide/image/#image-) are optional and will default to the image file's original properties if not provided.
+`alt`は必須ですが[その他の属性](/ja/guides/integrations-guide/image/#image-)はオプションで、指定が無ければ画像ファイルのプロパティが初期値として設定されます。
 
 #### リモート画像
 
-(必須属性:  [`src`](/ja/guides/integrations-guide/image/#src)・[`alt`](/ja/guides/integrations-guide/image/#alt)・[`format`](/ja/guides/integrations-guide/image/#format)・サイズ)), and dimensions)
+(必須属性:  [`src`](/ja/guides/integrations-guide/image/#src)・[`alt`](/ja/guides/integrations-guide/image/#alt)・[`format`](/ja/guides/integrations-guide/image/#format)・サイズ)
 
 `<Image />`コンポーネントの`src`属性に完全なURLを渡し、`alt`の値を含めます。
 
-`<Image />`コンポーネントはリモート画像のオリジナルファイルフォーマットを検知できないため、リモート画像を変換するために出力する`format`(pngやavif等)を指定する必要があります。
+`<Image />`コンポーネントはリモート画像のオリジナルのファイルフォーマットを検知できないため、リモート画像を変換するために出力する`format`(pngやavifなど)を指定する必要があります。
 
 `<Image />`コンポーネントはリモート画像のサイズを認識しないため、[`width`](/ja/guides/integrations-guide/image/#width)と[`height`](/ja/guides/integrations-guide/image/#height)、またはサイズの[`アスペクト比`](/ja/guides/integrations-guide/image/#aspectratio)を指定して、コンテンツレイアウトのシフトを回避する必要もあります。
 
-[その他のぞ属性](/ja/guides/integrations-guide/image/#image-)はオプションです。
+[その他の属性](/ja/guides/integrations-guide/image/#image-)はオプションです。
 
 #### `public/`のローカル画像
 
-(必須属性: [`src`](/ja/guides/integrations-guide/image/#src)・[`alt`](/ja/guides/integrations-guide/image/#alt)・[`format`](/ja/guides/integrations-guide/image/#format)、そしてサイズ))
+(必須属性: [`src`](/ja/guides/integrations-guide/image/#src)・[`alt`](/ja/guides/integrations-guide/image/#alt)・[`format`](/ja/guides/integrations-guide/image/#format)・サイズ)
 
 コンポーネントの`src`属性に公開フォルダからの相対パスを渡し、`alt`に値を含めます。
 
-これはリモート画像として扱われ、[`width`](/ja/guides/integrations-guide/image/#width)と[`height`](/ja/guides/integrations-guide/image/#height)の属性両方か、または1つの方向のサイズと[`aspectRatio`](/en/guides/integrations-guide/image/#aspectratio)属性が必須です。
+これはリモート画像として扱われ、[`width`](/ja/guides/integrations-guide/image/#width)と[`height`](/ja/guides/integrations-guide/image/#height)の両方の属性か、またはどちらか1つのサイズと[`aspectRatio`](/ja/guides/integrations-guide/image/#aspectratio)属性が必須です。
 
-画像を変換するための`format`属性値が必要です。(pngやavif等)
+画像を変換するための`format`属性値が必要です。(pngやavifなど)
 
-[その他の全プロパティ](/en/guides/integrations-guide/image/#image-)はオプションです。
+[その他の属性](/ja/guides/integrations-guide/image/#image-)はオプションです。
 
-元の画像は`public/`にあるファイルと同じくビルドフォルダーにそのままコピーされ、Astroの画像インテグレーションは画像の最適化されたバージョンの画像を返します。
+元画像は`public/`にある他のファイルと同じくビルドフォルダーにそのままコピーされ、Astroの画像インテグレーションは最適化された画像を返します。
 
 #### 例
 
@@ -172,7 +172,7 @@ const localAlt = "The Astro Logo";
 const remoteAlt = "A low-angle view of a forest during the daytime";
 ---
 
-<!--元の画像の幅、高さ、フォーマットを維持したままの最適化されたローカル画像 -->
+<!-- 元画像の幅、高さ、フォーマットを維持したままの最適化されたローカル画像 -->
 <Image src={localImage} alt={localAlt} />
 
 <!-- 元画像のアスペクト比に合わせて高さが再計算される-->
@@ -200,23 +200,23 @@ const remoteAlt = "A low-angle view of a forest during the daytime";
 
 Astroの[`<Picture />`コンポーネント](/ja/guides/integrations-guide/image/#picture-)は複数の画像サイズ・フォーマット・レイアウトなど、サイト上でレスポンシブな画像を提供するために利用できます。
 
-利用ユーザーのブラウザに最適な画像サイズ、解像度、そして画面サイズや帯域幅に基づいたファイルタイプを選択することができます。メディアクエリに基づいたブラウザに従わせるルールを指定できます。
+利用ユーザーのブラウザに最適な画像サイズ、解像度、そして画面サイズや帯域幅に基づいたファイルタイプを選択できます。また、メディアクエリに基づいてブラウザに従わせるルールを指定できます。
 
 このコンポーネントは、ユーザーが様々な画面サイズで見る場合に最適かしたり、アートディレクションに最適です。
 
 :::tip
-[レスポンシブ画像とアートディレクション]https://developer.mozilla.org/ja/docs/Learn/HTML/Multimedia_and_embedding/Responsive_images#%E3%82%A2%E3%83%BC%E3%83%88%E3%83%87%E3%82%A3%E3%83%AC%E3%82%AF%E3%82%B7%E3%83%A7%E3%83%B3)についてもっと知りたい場合はMDNのガイドを参照してください。
+[レスポンシブ画像とアートディレクション](https://developer.mozilla.org/ja/docs/Learn/HTML/Multimedia_and_embedding/Responsive_images#%E3%82%A2%E3%83%BC%E3%83%88%E3%83%87%E3%82%A3%E3%83%AC%E3%82%AF%E3%82%B7%E3%83%A7%E3%83%B3)についてもっと知りたい場合はMDNのガイドを参照してください。
 :::
 
 #### ローカル画像
 
-(必須属性: [`src`](/ja/guides/integrations-guide/image/#src-1)・[`widths`](/en/guides/integrations-guide/image/#widths)・[`sizes`](/en/guides/integrations-guide/image/#sizes)・[`alt`](/en/guides/integrations-guide/image/#alt-1)))
+(必須属性: [`src`](/ja/guides/integrations-guide/image/#src-1)・[`widths`](/ja/guides/integrations-guide/image/#widths)・[`sizes`](/ja/guides/integrations-guide/image/#sizes)・[`alt`](/ja/guides/integrations-guide/image/#alt-1))
 
 画像をフロントマターにインポートして、そのディレクトリを`<Picture />`コンポーネントの`src`属性に渡します。
 
-画像の幅と画像のガイダンスをコンポーネントへ渡す必要がありますが、[その他のプロパティ](/ja/guides/integrations-guide/image/#picture-)はオプションです。
+画像の幅と画像のガイダンスをコンポーネントへ渡す必要がありますが、[その他の属性](/ja/guides/integrations-guide/image/#picture-)はオプションです。
 
-デフォルト値では、`<Picture />`コンポーネントの[`formats`](/ja/guides/integrations-guide/image/#formats)には指定がなければ、元の画像のフォーマットに加え、`avif`と`webp`が含まれます。
+`<Picture />`コンポーネントの[`formats`](/ja/guides/integrations-guide/image/#formats)には指定がなければ、デフォルト値は元の画像のフォーマットに加えて`avif`と`webp`が含まれます。
 
 #### リモート画像
 
@@ -226,7 +226,7 @@ Astroの[`<Picture />`コンポーネント](/ja/guides/integrations-guide/image
 
 またリモート画像のビルド時に正しい高さを計算できるように`aspectRatio`も必要になります。
 
-画像の幅と画面サイズに関するガイダンスをコンポーネントに提供する必要がありますが、[その他のプロパティ](/ja/guides/integrations-guide/image/#picture-)はオプションです。
+画像の幅と画面サイズに関する指示をコンポーネントに与える必要がありますが、[その他の属性](/ja/guides/integrations-guide/image/#picture-)はオプションです。
 
 [`formats`](/ja/guides/integrations-guide/image/#formats)は必須ではありませんが、リモート画像の元のフォーマットが不明となりデフォルト値は含まれません。何も指定が無ければ、`webp`と`avif`だけが含まれます。
 
@@ -234,15 +234,15 @@ Astroの[`<Picture />`コンポーネント](/ja/guides/integrations-guide/image
 
 (必須属性: [`src`](/ja/guides/integrations-guide/image/#src-1)・[`widths`](/ja/guides/integrations-guide/image/#widths)・[`sizes`](/ja/guides/integrations-guide/image/#sizes)・[`alt`](/ja/guides/integrations-guide/image/#alt-1)・[`aspectRatio`](/ja/guides/integrations-guide/image/#aspectratio-1))
 
-コンポーネントの`src`属性にpublicフォルダからの相対パスを渡し、`alt`に値を格納します。
+コンポーネントの`src`属性にはpublicフォルダからの相対パスを渡し、`alt`の値を必要とします。
 
 画像はリモート画像として扱われるため、ビルド時に正しい高さを計算できるように`aspectRatio`の指定が必要です。
 
-画像の幅と画面サイズに関するガイダンスをコンポーネントに提供する必要がありますが、[その他のプロパティ](/ja/guides/integrations-guide/image/#picture-)はオプションです。
+画像の幅と画面サイズに関する指示をコンポーネントに与える必要がありますが、[その他の属性](/ja/guides/integrations-guide/image/#picture-)はオプションです。
 
-[`formats`](/ja/guides/integrations-guide/image/#formats)は必須ではありませんが、`public/`フォルダにある画像の元のフォーマットが不明のためデフォルト値は含まれません。何も指定が無ければ、`webp`と`avif`だけが含まれます。
+[`formats`](/ja/guides/integrations-guide/image/#formats)は必須ではありませんが、`public/`フォルダにある画像の元のフォーマットが不明となりデフォルト値は含まれません。何も指定が無ければ、`webp`と`avif`だけが含まれます。
 
-元の画像は`public/`にあるファイルと同じくビルドフォルダーにそのままコピーされ、Astroの画像インテグレーションは画像の最適化されたバージョンの画像を返します。
+元の画像は`public/`にある他のファイルと同じくビルドフォルダーにそのままコピーされ、Astroの画像インテグレーションは最適化された画像を返します。
 
 #### 例
 
@@ -253,7 +253,7 @@ import localImage from '../assets/logo.png';
 const remoteImage = 'https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png';
 ---
 
-<!--複数のサイズとフォーマットのローカル画像 -->
+<!--複数のサイズとフォーマットが指定されたローカル画像 -->
 <Picture src={localImage} widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px" formats={['avif', 'jpeg', 'png', 'webp']} alt="The Astro logo" />
 
 <!-- リモート画像(アスペクト比は必須です)-->
@@ -269,7 +269,7 @@ const remoteImage = 'https://www.google.com/images/branding/googlelogo/2x/google
 
 ### MDXでの利用
 
-`.mdx`ファイル内では、`<Image />`と`<Picture />`がインポートとエクスポートを通して画像の`src`を受け取ることができます。
+`.mdx`ファイル内では、インポートとエクスポートを通して`<Image />`と`<Picture />`が画像の`src`を受け取ることができます。
 
 ```mdx
 // src/pages/index.mdx
@@ -288,8 +288,7 @@ export const galaxy = 'https://astro.build/assets/galaxy.jpg';
 
 現在、`<Image />`と`<Picture />`コンポーネントにデフォルト値を指定する方法はありません。必須属性はそれぞれのコンポーネントに設定する必要があります。
 
-代わりの方法として、再利用できるよう他のAstroコンポーネントでこれらのコンポーネントをラッピングすることができます。例えば、以下のようにブログ
-As an alternative, you can wrap these components in another Astro component for reuse. For example, you could create a component for your blog post images:
+代わりの方法として、再利用できるよう他のAstroコンポーネントでこれらのコンポーネントをラッピングできます。例えば、以下のようにブログ記事画像をコンポーネントとして作成できます。
 
 ```astro title="src/components/BlogPostImage.astro"
 ---
@@ -309,15 +308,15 @@ const {src, ...attrs} = Astro.props;
 
 ## CMSやCDN上の画像利用
 
-画像のCDNネットワークとAstroの連携には、画像の完全URLを`<img>`タグやMarkdownの`src`属性として利用します。
+CDNネットワーク上の画像をとAstroで利用するには、画像の完全なURLを`<img>`タグやMarkdownの`src`属性として利用します。
 
-代わりに、もしCDNがNode.js SDKを提供している場合はプロジェクトでそれを利用できます。例えば、[CloudinaryのSDK](https://cloudinary.com/documentation/node_integration)は適切な`src`を利用して`<img>`タグを生成できます。
+代わりに、もしCDNがNode.js SDKを提供している場合はプロジェクトでSDKを利用できます。例えば、[CloudinaryのSDK](https://cloudinary.com/documentation/node_integration)は適切な`src`を利用して`<img>`タグを生成できます。
 
 Astroの画像インテグレーションで、[`<Image />`を用いた外部画像](#リモート画像)や[`<Picture />`](#リモート画像-1)コンポーネントを利用するには、リモート画像を扱うための適切なサイズとフォーマットを指定する必要があります。
 
 ## Altテキスト
 
-画像が誰も同じように見えるわけではないため、画像を扱ううえでアクセシビリティは特に重要になります。`alt`属性を使い画像に[Altテキストによる記述](https://www.w3.org/WAI/tutorials/images/)を提供します。
+画像が誰も同じように見えるわけではないため、画像を扱う上でアクセシビリティは特に重要になります。`alt`属性は画像に[Altテキストによる記述](https://www.w3.org/WAI/tutorials/images/)を与えます。
 
 この属性は画像インテグレーションの`<Image />`と`<Picture />`コンポーネントには必須です。Altテキストが指定されていない場合これらのコンポーネントはエラーを投げます。
 
@@ -325,4 +324,4 @@ Astroの画像インテグレーションで、[`<Image />`を用いた外部画
 
 ## コミュニテーインテグレーション
 
-公式の[`@astrojs/image`](/en/guides/integrations-guide/image/)インテグレーションに加え、Astroプロジェクトで画像の最適化や処理を行うためのサードパーティー製の[コミュニティー画像インテグレーション](https://astro.build/integrations/css+ui/?q=image)がいくつかあります。
+公式の[`@astrojs/image`](/ja/guides/integrations-guide/image/)インテグレーションに加え、Astroプロジェクトで画像の最適化や処理を行うためのサードパーティー製の[コミュニティー画像インテグレーション](https://astro.build/integrations/css+ui/?q=image)がいくつかあります。
