--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -22,7 +22,7 @@ Gatsby and Astro share some similarities that will help you migrate your project
 
 - Astro has support for [installing NPM packages](/en/guides/imports/#npm-packages), including React libraries. You may be able to keep some or all of your existing React components and dependencies.
 
-- Astro projects can also be SSG or [SSR with page level prerendering](/en/guides/server-side-rendering/#prerendering).
+- Astro projects can also be SSG or [SSR with page-level prerendering](/en/guides/server-side-rendering/#prerendering).
 
 ## Key Differences between Gatsby and Astro
 
