--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -80,7 +80,7 @@ You can also pass a `--template` argument to the `create astro` command to start
 Then, copy your existing Gatsby project files over to your new Astro project into a separate folder outside of `src`.
 
 :::tip
-Prefer to explore in your browser instead? Visit https://astro.new for a variety of starter templates that can be opened and edited in StackBlitz, CodeSandbox or Gitpod.
+Prefer to explore in your browser instead? Visit https://astro.new for a variety of starter templates that can be opened and edited in StackBlitz, CodeSandbox, or Gitpod.
 :::
 
 ### Install integrations (optional)
