--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -87,7 +87,7 @@ Prefer to explore in your browser instead? Visit https://astro.new for a variety
 
 You may find it useful to install some of [Astro's optional integrations](/en/guides/integrations-guide/) to use while converting your Gatsby project to Astro:
 
-- **@astrojs/react**: to reuse some existing React UI components in your new Astro site, or keep writing with React components.
+- **@astrojs/react**: to reuse some existing React UI components in your new Astro site or keep writing with React components.
 
 - **@astrojs/image**: to replace Gatsby's Image plugin with Astro's own image-optimizing components. (Experimental: works in `.astro` and `.mdx` files only.)
 
